Changed internal use grade variables to transient so they are not persisted

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -10,6 +10,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     database: mysql
     show-sql: false
+ #use this to easily get the database schema to build the database
 #    properties:
 #      javax:
 #        persistence:
